# mini-engine

./: .gitignore  CMakeLists.txt  main.cpp  pch.h
include/SDL2/: SDL_assert.h  SDL_audio.h  SDL_cpuinfo.h  SDL_error.h  SDL_events.h  SDL_gamecontroller.h  SDL_hints.h  SDL_joystick.h  SDL_log.h  SDL_metal.h  SDL_render.h  SDL_rwops.h  SDL_stdinc.h  SDL_surface.h  SDL_system.h  SDL_thread.h  SDL_video.h
shaders/: grid.frag  grid.vert  shader.frag  shader.vert  ui-image.frag  ui-image.vert  ui-rect.frag  ui.vert
src/: CMakeLists.txt  Camera.cpp  Camera.h  Camera3D.cpp  Camera3D.h  Framebuffer.cpp  Framebuffer.h  Grid.cpp  Grid.h  IndexBuffer.cpp  IndexBuffer.h  Math.h  ObjLoader.cpp  ObjLoader.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexBuffer.cpp  VertexBuffer.h  VertexFormat.cpp  VertexFormat.h  Window.cpp  Window.h
src/engine/: CMakeLists.txt  Camera3D.cpp  Camera3D.h  Grid.cpp  Grid.h  Material.cpp  Material.h  ObjLoader.cpp  ObjLoader.h  Renderer3D.cpp  Renderer3D.h  ShaderLoader.cpp  ShaderLoader.h  StaticMesh.h  StaticMeshLoader.cpp  StaticMeshLoader.h  TextureLoader.h
src/engine/ecs/: Entity.h  Scene.h  SparseSet.h  System.h  View.h
src/renderapi/: Buffer.h  CMakeLists.txt  DescriptorSet.h  Framebuffer.h  RenderAPI.cpp  RenderAPI.h  Resource.h  Shader.h  Uniform.cpp  Uniform.h  UniformVisitor.h  VertexLayout.h
src/renderapi/opengl/: CMakeLists.txt  OpenGLAPI.cpp  OpenGLAPI.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLDescriptorSet.cpp  (+12 more)
src/rhi/: CMakeLists.txt  DescriptorSet.h  Format.h  Pipeline.h  RHI.cpp  RHI.h  Resource.h  Texture2D.h  Uniform.cpp  Uniform.h  UniformVisitor.h  VertexLayout.h
src/ui/: App.cpp  App.h  CMakeLists.txt  Component.cpp  Component.h  Event.h  RenderList.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/util/: CMakeLists.txt  Matrix.h  ShaderLoader.cpp  ShaderLoader.h  Timestep.h  Vector.h  angle.h  stb.cpp
(+28 files in other folders)
